FIX: Remove .tna-filters causing build issues - contrast-background - exit code: 65

--- a/sass/etna.scss
+++ b/sass/etna.scss
@@ -705,24 +705,6 @@ Modified to match the existing site (for now)
     }
 }
 
-// filter refinements
-
-.tna-filters {
-    &__item--active #{&}__link {
-        @include colour.colour-background("contrast-background");
-        color: $color__white;
-    }
-
-    &__item--clear-all #{&}__link {
-        @include typography.main-font-weight-bold();
-        background: transparent;
-
-        &:hover {
-            @include colour.colour-font("font-dark");
-        }
-    }
-}
-
 // off-black header
 .tna-header--off-black {
     background-color: $color--off-black;
